Assigment1/initial/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/trant/OneDrive/Desktop/PPL/PPL/Assigment1/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "':'", "'getInt'", "'putInt'", 
                     "'putIntLn'", "'getFloat'", "'putFloat'", "'putFloatLn'", 
                     "'getBool'", "'putBool'", "'putBoolLn'", "'getString'", 
                     "'putString'", "'putStringLn'", "'putLn'", "'if'", 
                     "'else'", "'for'", "'return'", "'func'", "'type'", 
                     "'struct'", "'interface'", "'string'", "'int'", "'float'", 
                     "'boolean'", "'const'", "'var'", "'continue'", "'break'", 
                     "'range'", "'nil'", "'true'", "'false'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'=='", "'!='", "'<='", "'>='", 
                     "'&&'", "'||'", "'!'", "':='", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'<'", "'>'", "'.'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IF", "ELSE", "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", 
                      "INTERFACE", "STRING", "INT", "FLOAT", "BOOLEAN", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "NIL", 
                      "TRUE", "FALSE", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "EQUAL", "NOT_EQUAL", 
                      "LESS_EQUAL", "GREATER_EQUAL", "AND", "OR", "NOT", 
                      "ASSIGN_DECL", "ASSIGN", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "LESS", "GREATER", "DOT", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COMMA", "SEMI", "INTLIT", "FLOATLIT", "STRINGLIT", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "ID", "WS", "UNCLOSE_STRING", 
                      "NEWLINE", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_main_function = 1
    RULE_declare = 2
    RULE_variable_declaration = 3
    RULE_constant_declaration = 4
    RULE_type_declaration = 5
    RULE_struct_declaration = 6
    RULE_struct_field = 7
    RULE_interface_declaration = 8
    RULE_interface_method = 9
    RULE_parameter_list = 10
    RULE_parameter = 11
    RULE_function_declaration = 12
    RULE_type_specifier = 13
    RULE_method_declare = 14
    RULE_quick_decl = 15
    RULE_arrayLiteral = 16
    RULE_structLiteral = 17
    RULE_structField = 18
    RULE_statement = 19
    RULE_assignment_statement = 20
    RULE_assignment_operator = 21
    RULE_if_statement = 22
    RULE_else_clause = 23
    RULE_for_statement = 24
    RULE_for_condition = 25
    RULE_break_statement = 26
    RULE_continue_statement = 27
    RULE_call_statement = 28
    RULE_builtin_function_call = 29
    RULE_builtin_function_name = 30
    RULE_return_statement = 31
    RULE_block = 32
    RULE_expressionlist = 33
    RULE_expression1 = 34
    RULE_expression2 = 35
    RULE_expression3 = 36
    RULE_expression4 = 37
    RULE_expression5 = 38
    RULE_expression6 = 39
    RULE_expression7 = 40
    RULE_array_access = 41
    RULE_struct_access = 42
    RULE_struct_tail = 43
    RULE_primary1 = 44
    RULE_method_call = 45
    RULE_primary = 46
    RULE_function_call = 47
    RULE_operand = 48
    RULE_literal = 49

    ruleNames =  [ "program", "main_function", "declare", "variable_declaration", 
                   "constant_declaration", "type_declaration", "struct_declaration", 
                   "struct_field", "interface_declaration", "interface_method", 
                   "parameter_list", "parameter", "function_declaration", 
                   "type_specifier", "method_declare", "quick_decl", "arrayLiteral", 
                   "structLiteral", "structField", "statement", "assignment_statement", 
                   "assignment_operator", "if_statement", "else_clause", 
                   "for_statement", "for_condition", "break_statement", 
                   "continue_statement", "call_statement", "builtin_function_call", 
                   "builtin_function_name", "return_statement", "block", 
                   "expressionlist", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "array_access", "struct_access", "struct_tail", "primary1", 
                   "method_call", "primary", "function_call", "operand", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    IF=16
    ELSE=17
    FOR=18
    RETURN=19
    FUNC=20
    TYPE=21
    STRUCT=22
    INTERFACE=23
    STRING=24
    INT=25
    FLOAT=26
    BOOLEAN=27
    CONST=28
    VAR=29
    CONTINUE=30
    BREAK=31
    RANGE=32
    NIL=33
    TRUE=34
    FALSE=35
    ADD_ASSIGN=36
    SUB_ASSIGN=37
    MUL_ASSIGN=38
    DIV_ASSIGN=39
    MOD_ASSIGN=40
    EQUAL=41
    NOT_EQUAL=42
    LESS_EQUAL=43
    GREATER_EQUAL=44
    AND=45
    OR=46
    NOT=47
    ASSIGN_DECL=48
    ASSIGN=49
    PLUS=50
    MINUS=51
    MULT=52
    DIV=53
    MOD=54
    LESS=55
    GREATER=56
    DOT=57
    LPAREN=58
    RPAREN=59
    LBRACE=60
    RBRACE=61
    LBRACK=62
    RBRACK=63
    COMMA=64
    SEMI=65
    INTLIT=66
    FLOATLIT=67
    STRINGLIT=68
    LINE_COMMENT=69
    BLOCK_COMMENT=70
    ID=71
    WS=72
    UNCLOSE_STRING=73
    NEWLINE=74
    ILLEGAL_ESCAPE=75
    ERROR_CHAR=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclareContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclareContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 20)) & ~0x3f) == 0 and ((1 << (_la - 20)) & 2251799813686019) != 0):
                self.state = 100
                self.declare()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MiniGoParser.FUNC, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_main_function




    def main_function(self):

        localctx = MiniGoParser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MiniGoParser.FUNC)
            self.state = 109
            self.match(MiniGoParser.T__0)
            self.state = 110
            self.match(MiniGoParser.LPAREN)
            self.state = 111
            self.match(MiniGoParser.RPAREN)
            self.state = 112
            self.block()
            self.state = 113
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Variable_declarationContext,0)


        def constant_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Constant_declarationContext,0)


        def type_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Type_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Function_declarationContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declareContext,0)


        def quick_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Quick_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declare




    def declare(self):

        localctx = MiniGoParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.variable_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.constant_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.type_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.function_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.method_declare()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.quick_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MiniGoParser.Type_specifierContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression1(self):
            return self.getTypedRuleContext(MiniGoParser.Expression1Context,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_variable_declaration




    def variable_declaration(self):

        localctx = MiniGoParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(MiniGoParser.VAR)
            self.state = 124
            self.match(MiniGoParser.ID)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 125
                self.type_specifier()
                self.state = 126
                self.match(MiniGoParser.ASSIGN)
                self.state = 127
                self.expression1(0)
                pass

            elif la_ == 2:
                self.state = 129
                self.type_specifier()
                pass

            elif la_ == 3:
                self.state = 130
                self.match(MiniGoParser.ASSIGN)
                self.state = 131
                self.expression1(0)
                pass


            self.state = 134
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def expression1(self):
            return self.getTypedRuleContext(MiniGoParser.Expression1Context,0)


        def arrayLiteral(self):
            return self.getTypedRuleContext(MiniGoParser.ArrayLiteralContext,0)


        def structLiteral(self):
            return self.getTypedRuleContext(MiniGoParser.StructLiteralContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_constant_declaration




    def constant_declaration(self):

        localctx = MiniGoParser.Constant_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constant_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MiniGoParser.CONST)
            self.state = 137
            self.match(MiniGoParser.ID)
            self.state = 138
            self.match(MiniGoParser.ASSIGN)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 139
                self.expression1(0)
                pass

            elif la_ == 2:
                self.state = 140
                self.arrayLiteral()
                pass

            elif la_ == 3:
                self.state = 141
                self.structLiteral()
                pass


            self.state = 144
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def struct_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declarationContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def interface_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declarationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_type_declaration




    def type_declaration(self):

        localctx = MiniGoParser.Type_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_declaration)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MiniGoParser.TYPE)
                self.state = 147
                self.match(MiniGoParser.ID)
                self.state = 148
                self.struct_declaration()
                self.state = 149
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MiniGoParser.TYPE)
                self.state = 152
                self.match(MiniGoParser.ID)
                self.state = 153
                self.interface_declaration()
                self.state = 154
                self.match(MiniGoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(MiniGoParser.STRUCT, 0)

        def LBRACE(self):
            return self.getToken(MiniGoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniGoParser.RBRACE, 0)

        def struct_field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.Struct_fieldContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.Struct_fieldContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_declaration




    def struct_declaration(self):

        localctx = MiniGoParser.Struct_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_struct_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MiniGoParser.STRUCT)
            self.state = 159
            self.match(MiniGoParser.LBRACE)
            self.state = 161 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 160
                self.struct_field()
                self.state = 163 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==71):
                    break

            self.state = 165
            self.match(MiniGoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MiniGoParser.Type_specifierContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_field




    def struct_field(self):

        localctx = MiniGoParser.Struct_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(MiniGoParser.ID)
            self.state = 168
            self.type_specifier()
            self.state = 169
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(MiniGoParser.INTERFACE, 0)

        def LBRACE(self):
            return self.getToken(MiniGoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniGoParser.RBRACE, 0)

        def interface_method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.Interface_methodContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.Interface_methodContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_interface_declaration




    def interface_declaration(self):

        localctx = MiniGoParser.Interface_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_interface_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MiniGoParser.INTERFACE)
            self.state = 172
            self.match(MiniGoParser.LBRACE)
            self.state = 174 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 173
                self.interface_method()
                self.state = 176 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==71):
                    break

            self.state = 178
            self.match(MiniGoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_methodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MiniGoParser.Parameter_listContext,0)


        def type_specifier(self):
            return self.getTypedRuleContext(MiniGoParser.Type_specifierContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_interface_method




    def interface_method(self):

        localctx = MiniGoParser.Interface_methodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_interface_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(MiniGoParser.ID)
            self.state = 181
            self.match(MiniGoParser.LPAREN)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==71:
                self.state = 182
                self.parameter_list()


            self.state = 185
            self.match(MiniGoParser.RPAREN)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 24)) & ~0x3f) == 0 and ((1 << (_la - 24)) & 141012366262287) != 0):
                self.state = 186
                self.type_specifier()


            self.state = 189
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.COMMA)
            else:
                return self.getToken(MiniGoParser.COMMA, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_parameter_list




    def parameter_list(self):

        localctx = MiniGoParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.parameter()
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==64:
                self.state = 192
                self.match(MiniGoParser.COMMA)
                self.state = 193
                self.parameter()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
